[package]
name = "molecules"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "std_channels"
harness = false
path = "benches/queue/std_channels.rs"

[[bench]]
name = "crossbeam_channels"
harness = false
path = "benches/queue/crossbeam_channels.rs"

[[bench]]
name = "molecules"
harness = false
path = "benches/queue/common.rs"

[dependencies]
arc-swap = "1.4.0"

[dev-dependencies]
criterion = "0.3.5"
crossbeam = "0.8.1"
