[package]
name = "molecules"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "it_works"
path = "tests/queue/it_works.rs"

# Single threaded
[[bench]]
name = "std_channels"
harness = false
path = "benches/queue/std_channels.rs"

[[bench]]
name = "crossbeam_channels"
harness = false
path = "benches/queue/crossbeam_channels.rs"

[[bench]]
name = "molecules"
harness = false
path = "benches/queue/molecules_queue.rs"

# Multi threaded
[[bench]]
name = "crossbeam_channels_mt"
harness = false
path = "benches/multithreaded_queue/crossbeam_channels.rs"

[[bench]]
name = "molecules_mt"
harness = false
path = "benches/multithreaded_queue/molecules_queue.rs"

[[bench]]
name = "std_channels_mt"
harness = false
path = "benches/multithreaded_queue/std_channels.rs"

[dependencies]
arc-swap = "1.4.0"
bitflags = "1.3.2"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
crossbeam = "0.8.1"
